@@ -1324,13 +1324,14 @@ PHP_MSHUTDOWN_FUNCTION(openssl)
 #if OPENSSL_VERSION_NUMBER < 0x10100000L || defined (LIBRESSL_VERSION_NUMBER)
 	EVP_cleanup();
 
+	/* prevent accessing locking callback from unloaded extension */
+	CRYPTO_set_locking_callback(NULL);
+
 #ifndef OPENSSL_NO_ENGINE
 	/* Free engine list initialized by OPENSSL_config */
 	ENGINE_cleanup();
 #endif
 
-	/* prevent accessing locking callback from unloaded extension */
-	CRYPTO_set_locking_callback(NULL);
 	/* free allocated error strings */
 	ERR_free_strings();
 	CONF_modules_free();
