@@ -24,6 +24,9 @@ PHP                                                                        NEWS
   . Fixed bug GH-9535 (The behavior of mb_strcut in mbstring has been changed in
     PHP8.1). (Nathan Freeman)
 
+- OpenSSL:
+  . Fixed bug GH-9997 (OpenSSL engine clean up segfault). (Jakub Zelenka)
+
 - Pcntl:
   . Fixed bug GH-9298 (Signal handler called after rshutdown leads to crash).
     (Erki Aring)
